# teleports

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build-tdlib-in-ubuntu-sdk-docker.sh  build-tdlib.sh  clickable.json  manifest.json.in  prepare-tdlib.sh  release.sh  telegram-plus.apparmor  telegram-plus.desktop.in  teleports.apparmor  teleports.content-hub  teleports.desktop.in  teleports.url-dispatcher
app/: CMakeLists.txt  main.cpp  messagecontentdelegatemap.cpp  messagecontentdelegatemap.h  messagedelegatemap.cpp  version.h.in
app/pages/: AboutPage.qml
app/qml/: Main.qml  qml.qrc
app/qml/actions/: AppActions.qml  AuthAction.qml  AuthKey.qml  BackAction.qml  ChatActions.qml  ChatKey.qml  NotificationsAction.qml  NotificationsKey.qml  SettingsActions.qml  SettingsKey.qml  StickerActions.qml  StickerKey.qml  UserStateActions.qml  UserStateKey.qml  ViewActions.qml  ViewKeys.qml  qmldir
app/qml/components/: AttachPanel.qml  AttachPanelItem.qml  BusyPercentageIndicator.qml  ChatListDelegate.qml  ChatPhoto.qml  Citation.qml  CountryCodes.js  CountryPicker.qml  DeleteDialog.qml  FastScroll.qml  FlyingButton.qml  FormattedText.qml  GenericPhoto.qml  GroupPreviewDialog.qml  InputInfoBox.qml  MediaImport.qml  MediaViewer.qml  MenuPanelItem.qml  MessageStatusIndicator.qml  MessageStatusRow.qml  PopupDialog.qml  PopupDialogQqc2.qml  PopupWaitCancel.qml  ProfilePhoto.qml  ReplyMarkupShowKeyboard.qml  SetTTLDialog.qml  StickerPanel.qml  StickerSetsBox.qml  TGPushClient.qml  UserProfile.qml  VCardParser.qml  WaitingBar.qml  WebPagePreview.qml
app/qml/delegates/: MessageActionItem.qml  MessageAnimationItem.qml  MessageAudioItem.qml  MessageBarItem.qml  MessageBasicGroupChatCreate.qml  MessageBubbleItem.qml  MessageCallItem.qml  MessageChatAddMembersItem.qml  MessageChatChangePhoto.qml  MessageChatChangeTitle.qml  MessageChatDeleteMember.qml  MessageChatDeletePhoto.qml  MessageChatSetTTL.qml  MessageChatUpgradeFrom.qml  MessageContactItem.qml  MessageContactRegistered.qml  MessageContentAnimation.qml  MessageContentAudio.qml  MessageContentBase.qml  MessageContentCall.qml  MessageContentContact.qml  MessageContentDocument.qml  MessageContentLocation.qml  MessageContentPhoto.qml  MessageContentSticker.qml  MessageContentText.qml  MessageContentVideo.qml  MessageContentVideoNote.qml  MessageContentVoiceNote.qml  MessageCustomServiceAction.qml  MessageDateItem.qml  MessageDocumentItem.qml  MessageHiddenItem.qml  MessageItemBase.qml  MessageJoinByLink.qml  MessageLocationItem.qml  MessagePhotoItem.qml  MessagePinMessage.qml  MessageScreenshotTaken.qml  MessageStickerItem.qml  (+8 more)
app/qml/icons/: icons.qrc
app/qml/middleware/: ChatMiddleware.qml  ErrorsMiddleware.qml  StackMiddleware.qml  qmldir
app/qml/pages/: AboutPage.qml  AccountPage.qml  ArchivedChatListPage.qml  ChatInfoPage.qml  ChatListPage.qml  ConnectivityPage.qml  GroupDetailsPage.qml  LogoutPage.qml  MediaImport.qml  MessageListPage.qml  PickerPage.qml  PreviewPage.qml  SecretChatKeyHashPage.qml  SettingsPage.qml  UserListPage.qml  UserProfilePage.qml  WaitCodePage.qml  WaitPassword.qml  WaitPasswordPage.qml  WaitPhoneNumberPage.qml  WaitRegistrationPage.qml  WaitUserProfilePage.qml
app/qml/stores/: AuthStateStore.qml  ChatStateStore.qml  ConnectionsStore.qml  NotificationsStateStore.qml  RootStore.qml  SettingsStore.qml  StickersStore.qml  UsersStateStore.qml
assets/: 1.sql  (+1 more)
libs/qtdlib/: CMakeLists.txt
libs/qtdlib/auth/: qtdauthcode.cpp  qtdauthcode.h  qtdauthmanager.cpp  qtdauthmanager.h  qtdauthparams.cpp  qtdauthparams.h  qtdauthstate.cpp  qtdauthstate.h  qtdauthstatefactory.cpp
libs/qtdlib/call/: qtdcalldiscardreason.cpp  qtdcalldiscardreason.h
libs/qtdlib/chat/: qtdbasicgroupchat.cpp  qtdbasicgroupchat.h  qtdchat.cpp  qtdchat.h  qtdchataction.cpp  qtdchataction.h  qtdchatactionfactory.cpp  qtdchatinvitelinkinfo.cpp  qtdchatinvitelinkinfo.h  qtdchatlist.cpp  qtdchatlist.h  qtdchatlistmodel.cpp  qtdchatlistmodel.h  qtdchatlistsortfiltermodel.cpp  qtdchatlistsortfiltermodel.h  qtdchatmember.cpp  qtdchatmember.h  qtdchatmemberstatus.cpp  qtdchatmemberstatus.h  qtdchatposition.cpp  qtdchatposition.h  qtdchats.cpp  qtdchats.h  qtdchattype.cpp  qtdchattype.h  qtdchattypefactory.cpp  qtdchattypefactory.h  qtdsecretchat.cpp  qtdsecretchat.h  qtdsecretchatstate.cpp  qtdsortedchats.cpp  qtdsortedchats.h  qtdsupergroupchat.cpp  qtdsupergroupchat.h
libs/qtdlib/client/: qtdclient.cpp  qtdclient.h  qtdhandle.cpp  qtdhandle.h  qtdproxy.cpp  qtdproxy.h  qtdproxydirect.cpp  qtdthread.cpp  qtdthread.h
libs/qtdlib/common/: qabstractint32id.cpp  qabstractint32id.h  qabstractint53id.cpp  qabstractint64id.cpp  qabstractint64id.h  qabstracttdobject.cpp  qabstracttdobject.h  qtdhelpers.cpp  qtdhelpers.h  qtdint.cpp  qtdint.h  qtdrequest.cpp  qtdrequest.h  qtdresponse.cpp  qtdresponse.h
libs/qtdlib/connections/: qtdconnectionmanager.cpp  qtdconnectionmanager.h  qtdconnectionstate.cpp  qtdconnectionstate.h  qtdconnectionstatefactory.cpp
libs/qtdlib/files/: qtdanimation.cpp  qtdanimation.h  qtdaudio.cpp  qtdaudio.h  qtdbasephoto.cpp  qtdbasephoto.h  qtddocument.cpp  qtddocument.h  qtddownloadfilerequest.cpp  qtddownloadfilerequest.h  qtdfile.cpp  qtdfile.h  qtdlocalfile.cpp  qtdlocalfile.h  qtdminithumbnail.cpp  qtdminithumbnail.h  qtdphoto.cpp  qtdphoto.h  qtdphotos.cpp  qtdphotos.h  qtdphotosize.cpp  qtdphotosize.h  qtdremotefile.cpp  qtdsticker.cpp  qtdsticker.h  qtdthumbnail.cpp  qtdthumbnail.h  qtdthumbnailformat.cpp  qtdthumbnailformat.h  qtdvideo.cpp  qtdvideo.h  qtdvideonote.cpp  qtdvideonote.h  qtdvoicenote.cpp  qtdvoicenote.h
libs/qtdlib/messages/: qtdchatstate.cpp  qtdchatstate.h  qtddraftmessage.cpp  qtddraftmessage.h  qtdmessage.cpp  qtdmessage.h  qtdmessagecontent.cpp  (+14 more)
push/: CMakeLists.txt  config.h  i18n.h  push-helper.json  push.cpp  pushclient.cpp  pushclient.h  pushhelper.cpp  pushhelper.h
tests/: CMakeLists.txt  clientwrapper.cpp  clientwrapper.h  testing.qrc  testrunner.cpp  testrunner.h  testutils.cpp  testutils.h
tests/qml/: CMakeLists.txt  main.cpp
(+864 files in other folders)
